<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.WaiterLogin">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/Cart"
        android:textSize="30sp" />

    <ListView
        android:id="@+id/cartItemListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/sum"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/cartSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView"
                android:textSize="26sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSendCart"
            android:text="@string/Send"
            android:theme="@style/Theme.WaiterLogin" />
    </LinearLayout>
</LinearLayout>